<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_appointments"
            app:showAsAction="always"
            android:title="@string/appointments"
            android:icon="@drawable/appointment"/>
        <item
            android:id="@+id/nav_testbookings"
            app:showAsAction="always"
            android:title="@string/testbookings"
            android:icon="@drawable/test_bookings"/>
        <item
            android:id="@+id/nav_consultations"
            app:showAsAction="always"
            android:title="@string/consultations"
            android:icon="@drawable/consultations"/>
        <item
            android:id="@+id/nav_mydoctors"
            app:showAsAction="always"
            android:title="@string/mydoctors"
            android:icon="@drawable/are_you_a_doctor"/>
        <item
            android:id="@+id/nav_medicalrecords"
            app:showAsAction="always"
            android:title="@string/medicalrecords"

            android:icon="@drawable/records"/>
        <item
            android:id="@+id/nav_payment"
            android:title="@string/payment"
            android:icon="@drawable/payments"/>
    </group>

    <group android:checkableBehavior="single">
        <item android:id="@+id/helpcenter"
            android:title="Help Center"
            android:icon="@drawable/help_center"/>
        <item android:id="@+id/are_you_a_doctor"
            android:title="Are you a doctor?"
            android:icon="@drawable/are_you_a_doctor"/>
        <item android:id="@+id/vieweditprofiles"
            android:title="View and Edit profile"
            android:icon="@drawable/viewedit"/>
        <item android:id="@+id/logout"
            android:title="Logout"
            android:icon="@drawable/ic_baseline_login_24"/>
    </group>

</menu>