<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutheader"
            android:layout_width="0dp"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/casanovascotia"
                android:includeFontPadding="false"
                android:text="24/7 DOCTORS' CONSULTATION"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/josefinsansbold"
                android:includeFontPadding="false"
                android:text="Don't get panic we are there to serve you"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textSignInlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/halfbred"
            android:includeFontPadding="false"
            android:text="Sign In to your account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutheader" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintTop_toBottomOf="@id/textSignInlabel">

            <LinearLayout
                android:id="@+id/cardSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_4sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/halfbred"
                    android:includeFontPadding="false"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp" />

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:hint="you@example.com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:fontFamily="@font/halfbred"
                    android:includeFontPadding="false"
                    android:text="@string/password"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/_11ssp" />

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:hint="uudd@12"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorHintText"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
           android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/josefinsansbold"
            android:includeFontPadding="false"
            android:text="@string/sign_in"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <TextView
            android:id="@+id/textNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/halfbred"
            android:includeFontPadding="false"
            android:text="Don't have an account?"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/josefinsansbold"
            android:includeFontPadding="false"
            android:text="@string/sign_up"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="@dimen/_13ssp"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNoAccount" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>